benetech/ServiceNet#1167: Fix the UI issues on mobile views

--- a/src/main/webapp/app/modules/provider/mobile-components/header-mobile.scss
+++ b/src/main/webapp/app/modules/provider/mobile-components/header-mobile.scss
@@ -7,7 +7,7 @@ $header-color-hover: darken($header-color, 20%);
 $avatar-width: 25px;
 $avatar-height: 25px;
 
-.provider {
+.provider-app {
   @media only screen and (max-width: 768px) {
     .navbar-version {
       font-size: 10px;
