--- a/src/main/webapp/app/modules/provider/provider-shared.scss
+++ b/src/main/webapp/app/modules/provider/provider-shared.scss
@@ -1,4 +1,5 @@
 @import 'app-variables';
+@import 'filter-card';
 
 .provider-shared {
   min-height: 100vh;
@@ -171,16 +172,6 @@
       display: flex;
       justify-content: space-between;
       margin-top: 0.5rem;
-    }
-
-    .sort-container-fixed {
-      position: fixed;
-      top: 80px;
-      left: 0;
-      padding-left: 1rem;
-      padding-right: 1rem;
-      z-index: 100;
-      width: 100vw;
     }
 
     .mobile-invisible {
@@ -445,54 +436,6 @@
     span:hover {
       cursor: pointer;
     }
-  }
-
-  .filter-header {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding: 0.5rem 1rem;
-    border-bottom: 1px solid #dee2e6;
-    border-top-left-radius: 0.125rem;
-    border-top-right-radius: 0.125rem;
-  }
-
-  .filter-body {
-    position: relative;
-    flex: 1 1 auto;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    margin-bottom: 50px;
-  }
-
-  .filter-footer {
-    position: absolute;
-    bottom: 1.5rem;
-    right: 1rem;
-    left: 1rem;
-    width: calc(100% - 2rem);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    height: 50px;
-    border-top: 1px solid #dee2e6;
-    border-bottom-right-radius: 0.125rem;
-    border-bottom-left-radius: 0.125rem;
-  }
-
-  .filter-card {
-    min-height: calc(100% - 1.5rem);
-    background: white;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    font-family: 'Mulish', sans-serif;
-    font-size: 12px;
-    box-shadow: 5px 5px 4px 0 rgba(0, 0, 0, 0.1);
-  }
-
-  .filter-modal {
-    background: rgba(0, 0, 0, 0);
-    border: none;
   }
 
   .side-menu-container {
